add chat link to header

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -66,6 +66,9 @@
 						<li class="nav-item"><a href="browse.php" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#film"/>
 						</svg> {{ __("Browse") }}</a></li>
+						<li class="nav-item"><a href="https://discord.gg/uGWvcDpmZS" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#chat-square-dots"/>
+						</svg> {{ __("Chat") }}</a></li>
 					</ul>
 					<ul class="navbar-nav">
 						{% if logged_in %}
