--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -4,11 +4,19 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- bootstrap 5, which is just some rendering thing -->
+		<!-- bootstrap 5, which is just some rendering thing 
+		also yes guys i'm sorry if the way the code works is super ass i just
+		couldn't be bothered to fix it, also icty please don't report this 
+		just because of how the code was written. when you were writing poor
+		code did roller reverted those? nope. -pf94 may 17th 2021   -->
+		{% if theme != 'vanilla' %}
 		<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% endif %}.css" type="text/css">
+		{% else %}
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+		{% endif %} 
         <!-- jquery and bootstrap 5 javascript
-		even though bootstrap 5 claims to no longer support jquery
-		we still need it for the settings dropdown menu
+		(IMPORTANT: even though bootstrap 5 claims to no longer support jquery
+		we still need it for the settings dropdown menu)
 		-->
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
@@ -38,7 +46,13 @@
 					$("#bootstrap").attr("href", "assets/bs.css");
 					$("#navbar").attr("class", "navbar navbar-light bg-light navbar-static-top navbar-expand-md");
 					Cookies.set("theme", "light", { expires: 1000 });
-				});				
+				});		
+				$("#vanilla").click(function(){
+					$("#themeSelection").removeClass("show");
+					$("#bootstrap").attr("href", "https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css");
+					$("#navbar").attr("class", "navbar navbar-light bg-light navbar-static-top navbar-expand-md");
+					Cookies.set("theme", "vanilla", { expires: 1000 });
+				});								
 				$("#dark").click(function(){
 					$("#themeSelection").removeClass("show");
 					$("#bootstrap").attr("href", "assets/bs-dark.css");
@@ -85,6 +99,7 @@
 								<li><a class="dropdown-item" id="back" href="#">{{ __("Back") }}</a></li>
 								<li><a class="dropdown-item" id="light" href="#">{{ __("Light") }}</a></li>
 								<li><a class="dropdown-item" id="dark" href="#">{{ __("Dark") }}</a></li>
+								<li><a class="dropdown-item" id="vanilla" href="#">{{ __("Bootstrap Default") }}</a></li>
 							</ul>
 						</li>
 						<li class="nav-item"><a href="/upload.php" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
