--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -12,7 +12,7 @@
 		{% if theme != 'vanilla' %}
 		<link rel="stylesheet" id="bootstrap" href="assets/bs{% if theme == 'dark' %}-dark{% endif %}.css" type="text/css">
 		{% else %}
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+		<link id="bootstrap" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
 		{% endif %} 
         <!-- jquery and bootstrap 5 javascript
 		(IMPORTANT: even though bootstrap 5 claims to no longer support jquery
