add meta tags for watch page

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+		{% block head %}{% endblock %}
 		<!-- bootstrap 5, which is just some rendering thing 
 		also yes guys i'm sorry if the way the code works is super ass i just
 		couldn't be bothered to fix it, also icty please don't report this 
