--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -1,5 +1,18 @@
 {% extends "_layout.twig" %}
 
+{% block head %}
+	<meta name="title" content="{{ video.title }} - squareBracket">
+	<meta name="description" content="{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description }}">
+	<meta property="og:title" content="{{ video.title }} - squareBracket">
+	<meta property="og:description" content="{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description }}">
+	<meta property="og:image" content="{{ video_thumbnail(video.video_id) }}">
+	<meta property="og:url" content="{{ page_url }}">
+	<meta property="twitter:title" content="{{ video.title }} - squareBracket">
+	<meta property="twitter:description" content="{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description }}">
+	<meta property="twitter:image" content="{{ video_thumbnail(video.video_id) }}">
+	<meta name="twitter:card" content="summary_large_image">
+{% endblock %}
+
 {% block title %}{{ video.title }}{% endblock %}
 
 	{% block content %}
