--- a/templates/index.twig
+++ b/templates/index.twig
@@ -17,7 +17,7 @@
 			{% if logged_in %}
 				<!-- BAD HACK BAD HACK BAD HACK -->
 				<ul class="list-group list-group-flush">
-				<li class="list-group-item" style="height: 1.19%;"><img class="float-start" style="max-width: 40%;" src="{{ profile_image(current_user.username) }}" alt="pfp">
+				<li class="list-group-item" style="height: 1.19%;"><img class="float-start rounded" style="max-width: 40%;" src="{{ profile_image(current_user.username) }}"  alt="pfp">
 				<p class="text-end float-end">
 				<a href="settings.php">{{ __("Edit my profile") }}</a>
 				<br>
