Add Bootstrap default theme to the not-logged-in theme dropdown.
Who even made duplicate theme dropdowns in the first place?

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -135,6 +135,7 @@
 								<li><a class="dropdown-item" id="back" href="#">{{ __("Back") }}</a></li>
 								<li><a class="dropdown-item" id="light" href="#">{{ __("Light") }}</a></li>
 								<li><a class="dropdown-item" id="dark" href="#">{{ __("Dark") }}</a></li>
+								<li><a class="dropdown-item" id="vanilla" href="#">{{ __("Bootstrap Default") }}</a></li>
 							</ul>
 						</li>
 						<li class="nav-item"><a href="login.php" class="nav-link">{{ __("Login") }}</a></li>
