--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -22,46 +22,8 @@
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
 		<script src="vendor/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="assets/common.js"></script>
 		<title>{% block title %}{% endblock %} - squareBracket</title>
-		<script>
-			$(document).ready(function(){
-				$(window).click(function() {
-				  $("#mainMenu").removeClass("show");
-				  $("#themeSelection").removeClass("show");
-				});
-				$("#navbarDropdown").click(function(event){
-					event.stopPropagation();
-					$("#mainMenu").addClass("show");
-				});
-				$("#back").click(function(event){
-					event.stopPropagation();
-					$("#themeSelection").removeClass("show");
-					$("#mainMenu").addClass("show");
-				});
-				$("#themeSelect").click(function(event){
-					event.stopPropagation();
-					$("#themeSelection").addClass("show");
-				});
-				$("#light").click(function(){
-					$("#themeSelection").removeClass("show");
-					$("#bootstrap").attr("href", "assets/bs.css");
-					$("#navbar").attr("class", "navbar navbar-light bg-light navbar-static-top navbar-expand-md");
-					Cookies.set("theme", "light", { expires: 1000 });
-				});
-				$("#vanilla").click(function(){
-					$("#themeSelection").removeClass("show");
-					$("#bootstrap").attr("href", "https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css");
-					$("#navbar").attr("class", "navbar navbar-light bg-light navbar-static-top navbar-expand-md");
-					Cookies.set("theme", "vanilla", { expires: 1000 });
-				});
-				$("#dark").click(function(){
-					$("#themeSelection").removeClass("show");
-					$("#bootstrap").attr("href", "assets/bs-dark.css");
-					$("#navbar").attr("class", "navbar navbar-dark bg-dark navbar-static-top navbar-expand-md");
-					Cookies.set("theme", "dark", { expires: 1000 });
-				});
-			});
-		</script>
 	</head>
 	<body>
 		<nav id="navbar" class="navbar {% if theme == 'dark' %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %} navbar-static-top navbar-expand-md" style="margin-bottom:20px">
