--- a/templates/components/videobox.twig
+++ b/templates/components/videobox.twig
@@ -10,11 +10,9 @@
 			</div>
 			<div class="col-lg-6">
 				<h3><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
-				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("views") }}</p>
+				<p>{{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("views") }}	&bull;
+				<span class="text-muted">{{ data.time | relative_time }}</span></p>
 				<p>{{ data.description|length > 250 ? data.description|slice(0, 250) ~ '...' : data.description }}</p>
-			</div>
-			<div class="col-lg-2 text-end">
-			<small class="text-muted">{{ data.time | relative_time }}</small>
 			</div>
 		</div>
 	</div>
