--- a/templates/index.twig
+++ b/templates/index.twig
@@ -16,17 +16,29 @@
 			</div>
 		</div>
 	<div class="col-xl-3">
-		<h3>{{ __("Hi there, %s", [current_user.username]) }}</h3>
-		</p>
-			<img class="float-end rounded" style="max-width: 25%;" src="{{ profile_image(current_user.username) }}"  alt="pfp">
-			<p class="text-start float-start">
-			<a href="settings.php">{{ __("Edit my profile") }}</a><br>
-			<a href="browse.php">{{ __("Browse") }}</a>
+		{% if logged_in %}
+			<h3>{{ __("Hi there, %s", [current_user.username]) }}</h3>
 			</p>
-		</p>
-		<br><br><br><hr/>
+				<img class="float-end rounded" style="max-width: 35%" src="{{ profile_image(current_user.username) }}"  alt="pfp">
+				<p class="text-start float-start">
+					<!--todo: fix overflow, probably shorten the numbers too.-->
+					<p>You have 56854657 subscribers.</p>
+					<p>You have {{ totalViews }} views.</p>
+					<p>Your account was made {{ creationDate | relative_time }}.</p>
+					<!-- <a href="settings.php">{{ __("Edit my profile") }}</a><br> -->
+					<!-- <a href="browse.php">{{ __("Browse") }}</a> -->
+				</p>
+			</p>
+		{% else %}
+			<h3>{{ __("Welcome to squareBracket!") }}</h3>
+			<p>{{ __("This is like any other video sharing site... for now at least.") }}</p>
+			<div class="btn-group">
+				<a href="register.php" class="btn btn-primary">Get started</a>
+				<a href="login.php" class="btn btn-light">Login</a>
+			</div>
+		{% endif %}
+		<hr/>
 		<h3>{{ __("Spotlight") }}</h3>
-		<h4>{{ __("Welcome to squareBracket!") }}</h4>
 		<p>{{ __("squareBracket has been rewritten. Remember the old days of inconsistent UI/CSS and garbage insecure code? That's in the past.") }}</p>
 		<hr/>
 		<h3>{{ __("Featured Videos") }}</h3>
