bit of visual updates
1. new variable for the header since changing the blue made links look weird
2. update icons
3. remove blue corner leftovers from early-milestone 1
4. improve the apparance of watch page

--- a/bootstrap/_variables.scss
+++ b/bootstrap/_variables.scss
@@ -14,6 +14,7 @@ $pink: #eb46a9;
 $orange: #e6a417;
 $yellow: #f5cc18;
 $blue: #337ab7;
+$poktube-blue: #0054B6;
 $teal: #20c997;
 $dark: $gray-800;
 $enable-responsive-font-sizes: true;
