--- a/templates/browse.twig
+++ b/templates/browse.twig
@@ -6,7 +6,7 @@
 <div class="row">
 	<div class="col">
 		<div class="card">
-			<div class="card-header">{{ __("Videos") }}</div>
+			<div class="card-header bg-dark text-white">{{ __("Videos") }}</div>
 			<div class="card-body">
 				{% for video in videos|batch(4) %}
 				<div class="row">
@@ -17,7 +17,7 @@
 					{% endfor %}
 				</div>
 				{% else %}
-					<p>{{ __("No uploaded videos. :^(") }}</p>
+					<p>{{ __("No uploaded videos.") }}</p>
 				{% endfor %}
 				{# twig pagination code from: https://gist.github.com/maxpou/612359ed4af4cc5c4f06#gistcomment-3694029 #}
 				{% macro pagination(total, current, url, nearbyPagesLimit = 4) %}
