--- a/templates/components/comment.twig
+++ b/templates/components/comment.twig
@@ -1,7 +1,7 @@
 <div class="row">
-	<div class="col-lg-1" style="width:5%;padding-right:0">
+	<div class="col-lg-1" style="width:5.5%;padding-right:0">
 		<a href="user.php?name={{ data.u_username }}">
-			<img class="rounded" style="width:32px;height:32px" src="{{ profile_image(data.u_username) }}">
+			<img class="rounded w-100" src="{{ profile_image(data.u_username) }}">
 		</a>
 	</div>
 	<div class="col-lg-10">
