rename ms3 to alpha 3, visual tweaks yet again

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -25,7 +25,7 @@
 			<div class="container">
 				<a class="navbar-brand" href="/">
 				<img src="/assets/logo.png" alt="[sb]" height="24" class="d-inline-block align-text-top">
-				squareBracket MS3
+				squareBracket Alpha 3
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#house-door"/>
 						</svg> {{ __("Home") }}</a></li>
 						<li class="nav-item"><a href="browse.php" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
-							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#tv"/>
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#play-btn"/>
 						</svg> {{ __("Browse") }}</a></li>
 						<li class="nav-item"><a href="https://discord.gg/uGWvcDpmZS" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#discord"/>
@@ -81,7 +81,7 @@
 							</ul>
 						</li>
 						<li class="nav-item"><a href="/upload.php" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
-							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#camera-video"/>
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#record-circle"/>
 						</svg> {{ __("Upload") }}</a></li>
 						<li class="nav-item"><a href="logout.php" class="nav-link">{{ __("Log Out") }}</a></li>
 						{% else %}
