--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -81,7 +81,7 @@
 							</ul>
 						</li>
 						<li class="nav-item"><a href="/upload.php" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
-							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#record-circle"/>
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#upload"/>
 						</svg> {{ __("Upload") }}</a></li>
 						<li class="nav-item"><a href="logout.php" class="nav-link">{{ __("Log Out") }}</a></li>
 						{% else %}
