--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -39,18 +39,19 @@
 			<div class="card">
 				<div class="card-body">
 					<div class="row">
-						<div class="col-lg-11">
-							<h4>{{ video.title }}</h4> <button class="btn btn-warning" type="button">{{ __("Subscribe") }}</button>
+						<div class="col-lg-9">
+							<h4>{{ video.title }}</h4> 
 							<p><small>{{ __("Uploaded by %s on %s", [userlink(video, 'u_'), video.time | date('M j, Y')]) }} &bull; {{ video.views }} {{ __("views") }}</small></p>
 							<p>{{ video.description }}</p>
 						</div>
-						<div class="col-lg-1">
+						<div class="col-3">
 							<a href="#" id="{% if logged_in %}like{% endif %}" class="text-{% if rating %}info{% else %}body{% endif %}"><svg class="bi" width="20" height="20" fill="currentColor">
 								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-up-fill"/>
 							</svg></a> <span id="likes">{{ total_likes }}</span>
 							<a href="#" id="{% if logged_in %}dislike{% endif %}" class="text-{% if rating == 0 %}info{% else %}body{% endif %}"><svg class="bi" width="20" height="20" fill="currentColor">
 								<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#hand-thumbs-down-fill"/>
-							</svg></a> <span id="dislikes">{{ total_dislikes }}</span>
+							</svg></a> <span id="dislikes" style="padding-right: 10px">{{ total_dislikes }}</span>
+							<button class="btn btn-warning" type="button">{{ __("Subscribe") }}</button>
 						</div>
 					</div>
 				</div>
@@ -73,7 +74,7 @@
 	<div class="col-lg-3">
 	<h4>Recommended</h4>
 		{% for related_video in related_videos %}
-		{{ small_video_box(related_video)}}
+			{{ small_video_box(related_video)}}
 		{% endfor %}
 	</div>
 </div>
