--- a/templates/upload.twig
+++ b/templates/upload.twig
@@ -3,12 +3,25 @@
 {% block title %}{{ __("Upload") }}{% endblock %}
 
 	{% block content %}
+<h1>{{ __("Upload") }}</h1>
+<p><span class="badge bg-warning"><svg class="bi" width="16" height="16" fill="currentColor"><use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#exclamation-triangle-fill"/>
+	</svg> {{ __("Warning") }}</span> {{ __("By uploading your videos onto squareBracket, you acknowledge about rules that should be common sense.") }}</p>
 <form name="uploadForm" id="uploadForm" method="post" action="upload.php"
 enctype="multipart/form-data">
+<br>
+<dl class="row">
+  <dt class="col-sm-3">{{ __("Video Info") }}</dt>
+  <dd class="col-sm-9">{{ __("Enter the name and description of your video.") }}</dd>
+</dl>
 	<input type="text" class="form-control" name="title" value="" placeholder="{{ __("Title") }}">
 	<textarea class="form-control" name="desc" maxlength="500" form="uploadForm"
 	style="overflow:hidden;resize:none" rows="3" placeholder="{{ __("Description") }}"></textarea>
 	<input type="text" class="form-control" name="tags" value="" placeholder="{{ __("Tags") }}">
+	<br>
+<dl class="row">
+  <dt class="col-sm-3">{{ __("Upload Video File") }}</dt>
+  <dd class="col-sm-9">{{ __("Choose the video you want to upload.") }}</dd>
+</dl>
 	<input class="form-control" type="file" name="fileToUpload" id="fileToUpload" required>
 	<br>
 	<input class="btn btn-primary" type="submit" id="upload" name="upload"
