--- a/templates/user.twig
+++ b/templates/user.twig
@@ -19,7 +19,7 @@
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	{% endif %}
-	<div class="p-1 mb-4 col-md-6 col-lg-4 bg-dark rounded-3 text-white">
+	<div class="p-1 mb-4 col-md-6 col-lg-4 bg-dark rounded-3 text-white" style="height: 1%;"> <!-- This prevents the user info box from being extremely tall. Box probably needs to be redesigned... -->
 		<div class="container-fluid py-5">
 			<div class="row">
 				<div class="col text-center">
@@ -34,8 +34,12 @@
 		<div class="card">
 			<div class="card-body">
 				<div class="caption">
-					<h3>{{ __("Most recent uploaded video") }}</h3>
-					{{ video_box(latestVideo)}}
+					<h3>{{ __("Latest Uploads") }}</h3>
+					{% for latestVideo in latestVideos %}
+						{{ video_box(latestVideo) }}
+					{% else %}
+						<p>{{ __("There are no videos uploaded by %s.", [user.username]) }}</p>
+					{% endfor %}
 				</div>
 			</div>
 		</div>
