--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -21,7 +21,7 @@
 		<title>{% block title %}{% endblock %} - squareBracket</title>
 	</head>
 	<body>
-		<nav id="navbar" class="navbar {% if theme == 'dark' %} navbar-dark bg-dark {% else %} {% if theme == 'light' %} navbar-dark bg-primary {% else %} navbar-light bg-light {% endif %} {% endif %} navbar-static-top navbar-expand-md" style="margin-bottom:20px">
+		<nav id="navbar" class="navbar {% if theme == 'dark' %} navbar-dark bg-dark {% elseif theme == 'vanilla' %} navbar-light bg-light {% else %} navbar-dark bg-primary {% endif %} navbar-static-top navbar-expand-md" style="margin-bottom:20px">
 			<div class="container">
 				<a class="navbar-brand" href="/">
 				<img src="/assets/logo.png" alt="[sb]" height="24" class="d-inline-block align-text-top">
