add github icon to header

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -41,6 +41,9 @@
 						<li class="nav-item"><a href="https://discord.gg/uGWvcDpmZS" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#discord"/>
 						</svg> {{ __("Discord") }}</a></li>
+						<li class="nav-item"><a href="https://discord.gg/uGWvcDpmZS" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
+							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#github"/>
+						</svg> {{ __("GitHub") }}</a></li>
 					</ul>
 					<ul class="navbar-nav">
 						{% if logged_in %}
