--- a/templates/components/videothumbnail.twig
+++ b/templates/components/videothumbnail.twig
@@ -1,11 +1,1 @@
-{% if file_exists %}
-	{% set imgSrcPath = 'assets/thumb/' ~ data ~ '.png' %}
-	{% autoescape %}
-		{{ imgSrcPath | raw }}
-	{% endautoescape %}
-{% else %}
-	{% set imgSrcPath = 'assets/placeholder.png' %}
-	{% autoescape %}
-		{{ imgSrcPath | raw }}
-	{% endautoescape %}
-{% endif %}
+{% if file_exists %}{% set imgSrcPath = 'assets/thumb/' ~ data ~ '.png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% else %}{% set imgSrcPath = 'assets/placeholder.png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% endif %}
