localize more strings and fix you have views bug

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -18,9 +18,9 @@
 				<img class="float-end rounded w-25" src="{{ profile_image(current_user.username) }}"  alt="pfp">
 				<p class="text-start float-start">
 					<!--todo: fix overflow, probably shorten the numbers too.-->
-					<p>You have 56854657 subscribers.</p>
-					<p>You have {{ totalViews }} views.</p>
-					<p>Your account was made {{ creationDate | relative_time }}.</p>
+					<p>{{ __("You have %s subscribers.", ['545875687468768']) }}</p>
+					<p>{{ __("You have %s views.", [totalViews ?? __("no")]) }}</p>
+					<p>{{ __("Your account was made %s.", [creationDate | relative_time]) }}</p>
 					<!-- <a href="settings.php">{{ __("Edit my profile") }}</a><br> -->
 					<!-- <a href="browse.php">{{ __("Browse") }}</a> -->
 				</p>
