more realistic placeholder

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -18,7 +18,7 @@
 				<img class="float-end rounded w-25" src="{{ profile_image(current_user.username) }}"  alt="pfp">
 				<p class="text-start float-start">
 					<!--todo: fix overflow, probably shorten the numbers too.-->
-					<p>{{ __("You have %s subscribers.", ['545875687468768']) }}</p>
+					<p>{{ __("You have %s subscribers.", ['0']) }}</p>
 					<p>{{ __("You have %s views.", [totalViews ?? __("no")]) }}</p>
 					<p>{{ __("Your account was made %s.", [creationDate | relative_time]) }}</p>
 					<!-- <a href="settings.php">{{ __("Edit my profile") }}</a><br> -->
