insert commit title here

--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -24,10 +24,15 @@
 		    <style>
 				.igui_seekbar_progress,
 				.igui_seekbar_scrubber {
-				  background-color: var(--bs-blue);
+				  background-color: var(--bs-primary);
 				}
 				.ig-container {
 					font-family: var(--bs-font-sans-serif);
+				}
+				.ig_contextmenu {
+				background: rgba(0,0,0,0.85);
+				border-radius: 5px;
+				padding: 8px 0;
 				}
 			</style>
 		<script>
