[CodeFactor] Apply fixes to commit 8ccab7a

--- a/testing_new_css/main.css
+++ b/testing_new_css/main.css
@@ -20,7 +20,7 @@ background-color: #ad0707;
 }
 
 .alert {
-	padding: 1rem 1rem;
+	padding: 1rem;
 	background-color: #d1d1d1;
 	border-radius: .25rem;
 }
