fix profile picture not showing up on watch page

--- a/templates/watch.twig
+++ b/templates/watch.twig
@@ -55,8 +55,8 @@
 						<div class="col-lg-9">
 							<div class="row">
 								<div class="col-lg-2" style="width:10%;padding-right:0">
-									<a href="user.php?name={{ data.u_username }}">
-										<img class="rounded w-100" src="{{ profile_image(data.u_username) }}">
+									<a href="user.php?name={{ video.u_username }}">
+										<img class="rounded w-100" src="{{ profile_image(video.u_username) }}">
 									</a>
 								</div>
 								<div class="col-lg-7">
