--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -41,7 +41,7 @@
 						<li class="nav-item"><a href="https://discord.gg/uGWvcDpmZS" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#discord"/>
 						</svg> {{ __("Discord") }}</a></li>
-						<li class="nav-item"><a href="https://discord.gg/uGWvcDpmZS" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
+						<li class="nav-item"><a href="https://github.com/chazizsquarebracket/squarebracket" class="nav-link"><svg class="bi" width="16" height="16" fill="currentColor">
 							<use xlink:href="vendor/twbs/bootstrap-icons/bootstrap-icons.svg#github"/>
 						</svg> {{ __("GitHub") }}</a></li>
 					</ul>
@@ -58,7 +58,7 @@
 						  </a>
 						  <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1" style="">
 							<li><a class="dropdown-item" href="#">{{ __("Settings") }}</a></li>
-							<li><a class="dropdown-item" href="#">Profile</a></li>
+							<li><a class="dropdown-item" href="#">{{ __("Profile") }}</a></li>
 							<li><hr class="dropdown-divider"></li>
 							<li><a class="dropdown-item" href="#">{{ __("Log Out") }}</a></li>
 						  </ul>
